core/compiler/tests/programs/ok/closure.loz
f x y = g x y
where
    g a b = x * y * a * b
.

main = f 1 2