core/compiler/tests/programs/type_err/call_undefined.loz
f x y = h x y

g x y = x * y

main = f 18 9